feat: 간편장부 서버연결 디자인 변경

--- a/app/(with-sidebar)/transactions/analytics/page.module.css
+++ b/app/(with-sidebar)/transactions/analytics/page.module.css
@@ -106,9 +106,10 @@
 
 
 .reportsContainer {
+  height: 4rem;
   margin-top: 2rem;
   display: flex;
-  gap: 2rem;
+  gap: 10rem;
 }
 
 /* 반응형 스타일 */
