--- a/app/(no-sidebar)/(auth)/login/login.module.css
+++ b/app/(no-sidebar)/(auth)/login/login.module.css
@@ -35,7 +35,7 @@
     padding: 8rem 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     gap: 1rem;
 }
