feat: 매출지출 페이지 레이아웃 조정

--- a/app/(with-sidebar)/transactions/analytics/page.module.css
+++ b/app/(with-sidebar)/transactions/analytics/page.module.css
@@ -4,12 +4,13 @@
   height: calc(100vh - var(--header-height) - 60px);
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .selectContainer {
   display: flex;
   justify-content: center;
   gap: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 .selectContainer select {
   padding: 8px 16px;
@@ -23,7 +24,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
-  padding: 20px 50px;
+  padding: 20px;
   border:  1px solid #e5e7eb;
   border-radius: 20px;
   min-height: 78vh;
@@ -33,18 +34,21 @@
 .leftSection {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
   align-items: center;
   justify-content: center;
   border-right: 1px solid #e5e7eb;
+  padding-right: 1rem;
 }
 
 .chartContainer {
   display: flex;
-  gap: 4rem;
   margin-top: 3rem;
 }
 
+.chartStyle {
+  width: 350px;
+  height: 300px;
+}
 
 .rightSection {
   display: flex;
@@ -52,7 +56,6 @@
   align-items: center;
   justify-content: center;
   padding: 0 1solid black;
-
 }
 
 .barChartContainer {
@@ -68,7 +71,6 @@
 .summaryContainer {
   display: flex;
   gap: 2rem;
-  margin-top: 2rem;
 }
 
 .card {
@@ -106,10 +108,10 @@
 
 
 .reportsContainer {
-  height: 4rem;
+  height: 3rem;
   margin-top: 2rem;
   display: flex;
-  gap: 10rem;
+  gap: 2rem;
 }
 
 /* 반응형 스타일 */
@@ -133,11 +135,16 @@
 
 @media (max-width: 768px) {
   .container {
-    margin: 15px auto;
+    margin: 20px auto;
+    height: 100%;
   }
 
   .gridContainer {
     padding: 15px;
+  }
+
+  .selectContainer {
+    display: flex;
   }
 
   .chartContainer {
@@ -145,19 +152,21 @@
   }
 
   .card {
-    min-width: auto;
     width: 100%;
+  }
+
+  .chartContainer {
+    gap: 2rem;
   }
 }
 
 /* 매우 작은 화면에서의 추가 조정 */
 @media (max-width: 480px) {
   .selectContainer {
-    flex-direction: column;
     align-items: center;
   }
 
   .selectContainer select {
-    width: 80%;
+    width: 30%;
   }
 }
