--- a/components/navigation/navigation.module.css
+++ b/components/navigation/navigation.module.css
@@ -19,10 +19,13 @@
 .mainItemBox{
     display: flex;
     align-items: center;
-    padding: 20px 60px;
+    padding: 20px 55px;
     font-size: 16px;
     cursor: pointer;
+    white-space: nowrap;
+    gap: 1rem;
 }
+
 .mainItemBox.active {
     color: var(--woori-deep-blue); 
     background-color: #f5f5f5;
@@ -33,7 +36,6 @@
 .icon {
     font-size: 1rem;
     min-width: 20px; 
-    margin-right: 35px;
     font-weight: 600;
 
 }
