--- a/components/navigation/navigation.module.css
+++ b/components/navigation/navigation.module.css
@@ -7,7 +7,6 @@
 }
 
 .topSection{
-    /* padding: 20px; */
     width: 100%;
     height: 8.2%;
     border-bottom: 1px solid #e5e7eb;
@@ -19,7 +18,7 @@
 .mainItemBox{
     display: flex;
     align-items: center;
-    padding: 20px 55px;
+    padding: 20px 60px;
     font-size: 16px;
     cursor: pointer;
     white-space: nowrap;
@@ -37,7 +36,6 @@
     font-size: 1rem;
     min-width: 20px; 
     font-weight: 600;
-
 }
 
 .subMenuBox{
@@ -76,6 +74,7 @@
     transition: all 0.2s ease;
     margin-top: auto;
     border-top:  1px solid #e5e7eb;
+    white-space: nowrap;
 }
 .logout:hover {
     color: var(--woori-deep-blue);
@@ -137,6 +136,24 @@
 
 .mobileLogout span {
     margin-right: 0.5rem;
+}
+
+@media (max-width: 1280px) {
+    .mainItemBox{
+        padding: 20px;
+    }
+
+    .icon {
+        display: none;
+    }
+
+    .logout {
+        padding: 20px;
+    }
+
+    .topSection{
+        height: 10%;
+    }
 }
 
 
