--- a/app/(with-sidebar)/employee/management/page.module.css
+++ b/app/(with-sidebar)/employee/management/page.module.css
@@ -2,3 +2,10 @@
     padding: 20px;
     background-color: #f5f5f5;
 }
+
+.buttonsize {
+    width: 10rem;
+    height: 30px;
+    margin-left: auto;
+    margin-right: 25px;
+}
