--- a/components/input/account-input.module.css
+++ b/components/input/account-input.module.css
@@ -32,9 +32,10 @@
   border-radius: 0.5rem;
   border: 1px solid #e5e7eb;
   background-color: white;
-  min-width: 8rem; /* 최소 너비 줄임 */
+  min-width: fit-content; /* 최소 너비 줄임 */
   font-size: 1rem;
   height: 2.75rem;
+  width: auto;
 }
  
  .bankButton {
@@ -61,7 +62,7 @@
   top: 100%;
   left: 0;
   margin-top: 0.25rem;
-  width: 18rem;
+  width: 100%;
   height: 20rem;
   overflow-y: auto;
   background-color: white;
