--- a/components/input/account-input.module.css
+++ b/components/input/account-input.module.css
@@ -9,6 +9,17 @@
   margin-top: 5px;
   font-weight: bold;
 }
+
+.zip-code-button {
+  padding: 8px 12px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-bottom: 8px; /* 버튼의 세로 간격 통일 */
+  height: 2.75rem;
+}
  
  .title {
   font-size: 1.125rem;
