feat: 출퇴근, 금융 상품 페이지 디자인 수정

--- a/app/(with-sidebar)/financial-products/page.module.css
+++ b/app/(with-sidebar)/financial-products/page.module.css
@@ -94,10 +94,11 @@
   }
   
   .label {
-    width: 120px;
+    width: 50px;
     color: #666;
     font-size: 15px;
     font-weight: 500;
+    margin-left: 10px;
   }
   
   .value {
