--- a/components/modal/attendance-modal/attendance-modal-body.module.css
+++ b/components/modal/attendance-modal/attendance-modal-body.module.css
@@ -5,6 +5,7 @@
     /* min-height: 100vh; */
     width: 500px;
     min-width: 400px;
+    padding-bottom: 50px;
     /* background-color: #f5f5f5; */
   }
 
