--- a/app/(with-sidebar)/employee/management/page.module.css
+++ b/app/(with-sidebar)/employee/management/page.module.css
@@ -3,9 +3,12 @@
     background-color: #f5f5f5;
 }
 
-.buttonsize {
-    width: 10rem;
-    height: 30px;
-    margin-left: auto;
-    margin-right: 25px;
+.title {
+    font-size: 1.5rem;
+}
+
+.employeeHeader {
+    display: flex;
+    justify-content: space-between;
+    margin: 50px 20px 10px;
 }
