--- a/components/dropdown/business-dropdown.module.css
+++ b/components/dropdown/business-dropdown.module.css
@@ -4,7 +4,7 @@
     display: inline-block;
     width: 100%;
     height: 100%;
-    background-color: #f8fafc;
+    /* background-color: #f8fafc; */
     text-align: center;
 }
 
@@ -12,15 +12,12 @@
     width: 100%;
     height: 100%;
     padding: 10px 15px;
-    background-color: #f8fafc;
-    border: 1px solid #ddd;
     text-align: left;
     cursor: pointer;
     font-size: 16px;
     font-weight: 600;
     display: flex;
     position: relative;
-    border-radius: 8px;
 }
 
 .dropbtn.active {
@@ -33,12 +30,11 @@
     display: flex; 
     justify-content: center; 
     align-items: center; 
-    padding-right: 30px;
 }
 
 .arrow {
     position: absolute;
-    right: 20px;
+    right: 30px;
     top: 50%;
     transform: translateY(-50%);
     font-size: 12px;
@@ -51,23 +47,12 @@
     left: 0;
     width: 100%;
     background-color: white;
-    border: 1px solid #ddd;
-    border-top: none;
     z-index: 1000;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    border-radius: 0 0 8px 8px;
+    /* box-shadow: 0 2px 3px rgba(0,0,0,0.1); */
     font-size: 14px;
 }
 
 .dropdownItem {
     padding: 10px 15px;
     cursor: pointer;
-}
-
-.dropdownItem:hover {
-    background-color: #f5f5f5;
-}
-
-.dropdownItem:last-child {
-    border-radius: 0 0 8px 8px;
 }
