--- a/components/navigation/navigation.module.css
+++ b/components/navigation/navigation.module.css
@@ -4,12 +4,14 @@
     display: flex;
     flex-direction: column;
     border-right: 1px solid #e5e7eb;
+    background-color: var(--sidebar-color);
 }
 
 .topSection{
     width: 100%;
     height: 8.2%;
-    border-bottom: 1px solid #e5e7eb;
+    /* border-bottom: 1px solid #e5e7eb; */
+    color: #545F71;
 }
 .navigationSection{
     flex:1;
@@ -23,29 +25,27 @@
     cursor: pointer;
     white-space: nowrap;
     gap: 1rem;
+    color: #545F71;
+    transition: color 0.5s ease;
 }
 
 .mainItemBox.active {
     color: var(--woori-deep-blue); 
-    background-color: #f5f5f5;
     font-weight: 600;
-    
 }
 
 .icon {
-    font-size: 1rem;
+    font-size: 1.1rem;
     min-width: 20px; 
-    font-weight: 600;
+    stroke-width: 0.7;
 }
 
 .subMenuBox{
     font-size: 12px;
-    /* padding: 8px 20px 8px 80px;  */
     padding:8px 0;
     display: flex;
     flex-direction: column;    
-    gap: 20px; 
-    background-color: #f9fafb;
+    gap: 20px;
 }
 
 .subMenuItem{
@@ -54,10 +54,12 @@
     justify-content: center;
     width: 100%;
     font-size: 13px;
+    transition: color 0.5s ease;
 }
 .subMenuItemLink:hover{
     cursor: pointer;
     text-decoration: underline;
+    font-weight: 600;
     text-underline-offset: 4px; 
     color: var(--woori-deep-blue);
 }
