--- a/components/calendar/calendar.css
+++ b/components/calendar/calendar.css
@@ -1,8 +1,9 @@
 .fc { /* FullCalendar의 root element */
-    /* max-width: 100%; */
-    padding: 30px 50px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    margin: 20px auto;
+    padding: 50px 70px;
+    min-height: 80vh;
+    border: 1px solid #e5e7eb;
+    border-radius: 20px;
 }
 
 .fc-col-header-cell{
