feat: 직원 관리 페이지 필터링 추가

--- a/app/(with-sidebar)/employee/management/page.module.css
+++ b/app/(with-sidebar)/employee/management/page.module.css
@@ -14,6 +14,13 @@
     font-weight: bold;
 }
 
+.titleRight {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
 .employeeHeader {
     display: flex;
     justify-content: space-between;
