--- a/app/(no-sidebar)/(auth)/signup/signup.module.css
+++ b/app/(no-sidebar)/(auth)/signup/signup.module.css
@@ -164,3 +164,10 @@
     margin-top: 5px;
     font-weight: bold;
   }
+
+  .success {
+    color: green;
+    font-size: 0.7rem;
+    margin-top: 5px;
+    font-weight: bold;
+  }
