--- a/app/(with-sidebar)/payroll-auto-transfer/records/page.module.css
+++ b/app/(with-sidebar)/payroll-auto-transfer/records/page.module.css
@@ -36,3 +36,27 @@
     padding: 10px;
 }
 
+.modalFeeInfo {
+    margin-top: 16px;
+    font-size: 14px;
+    color: #555;
+    text-align: center;
+  }
+  .modalFeeInfo strong {
+    color: #d9534f; /* 강조 색상 */
+  }
+  
+  .modalRadioGroup {
+    display: flex;
+    justify-content: center; /* 가운데 정렬 */
+    gap: 20px; /* 버튼 간 간격 */
+    margin-top: 16px;
+  }
+  
+  .modalRadioGroup label {
+    display: flex;
+    align-items: center; /* 라디오 버튼과 텍스트를 수직으로 정렬 */
+    font-size: 20px;
+    cursor: pointer; /* 클릭 가능한 느낌을 줌 */
+  }
+
