--- a/app/(with-sidebar)/attendance/daily-attendance/page.module.css
+++ b/app/(with-sidebar)/attendance/daily-attendance/page.module.css
@@ -7,3 +7,41 @@
     justify-content: space-between;
     margin: 50px 20px 10px;
 }
+.navigation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    margin: 20px 0;
+  }
+  
+  .navButton {
+    background-color: grey;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    padding: 8px 16px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+  }
+  
+  .navButton:hover {
+    background-color: black;
+  }
+  
+  .navButton:active {
+    transform: scale(0.95);
+  }
+  .basebtnBox{
+    display: flex;
+    align-items: center;
+  }
+  
+  .selectedDate {
+    font-size: 20px;
+    font-weight: bold;
+    color: #333;
+  }
+  
