--- a/app/(with-sidebar)/attendance/daily-attendance/page.module.css
+++ b/app/(with-sidebar)/attendance/daily-attendance/page.module.css
@@ -16,24 +16,20 @@
   }
   
   .navButton {
-    background-color: grey;
-    color: #fff;
+    width: 20px;
+    height: 20px;
+    background-color: #e0e0e0;
     border: none;
-    border-radius: 8px;
-    padding: 8px 16px;
-    font-size: 16px;
-    font-weight: bold;
+    border-radius: 3px;
     cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-  }
-  
-  .navButton:hover {
-    background-color: black;
-  }
-  
-  .navButton:active {
-    transform: scale(0.95);
-  }
+    transition: transform 0.2s ease-in-out;
+    font-size: 10px;
+    color: var(--gray);
+}
+
+.navButton:hover {
+    transform: scale(1.2);
+}
   .basebtnBox{
     display: flex;
     align-items: center;
