--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,8 @@
   --header-height:80px;
   --header-padding: 20px 100px;
   --header-background: white;
-  --main-woori-blue: #0180CD;
+  /* --main-woori-blue: #0180CD; */
+  --main-woori-blue: #FF6F0F;
   --woori-light-blue: #38BEEF;
   --woori-deep-blue: #0067AC;
   --gray: #787878;
