--- a/components/header/guest-header/guest-header.module.css
+++ b/components/header/guest-header/guest-header.module.css
@@ -23,7 +23,7 @@
 }
 
 .logoBox{
-    width: 250px !important;
+    width: 200px !important;
     height: auto !important;
     object-fit: contain;
 }
@@ -35,22 +35,36 @@
     display: flex; /* 오른쪽 영역도 flex로 설정 */
     align-items: center; /* 수직 가운데 정렬 */
     justify-content: end;
-    gap: 20px;
+    gap: 10px;
 }
 
-.profile_button {
+.login_button {
     background-color: #ffffff;
-    border: 1px solid #e0e0e0; /* 테두리 두께와 색상 추가 */
-    padding: 8px 16px;
-    border-radius: 4px;
+    padding: 8px 14px;
+    border-radius: 10px;
     font-size: 14px;
+    font-weight: bold;
     color: #333;
     cursor: pointer;
     transition: background-color 0.2s ease;
 }
 
-.profile_button:hover {
+.login_button:hover {
     background-color: #e0e0e0;
+}
+
+.signup_button {
+    background-color: var(--main-woori-blue);
+    padding: 8px 14px;
+    border-radius: 10px;
+    font-size: 14px;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+.signup_button:hover {
+    background-color: var(--woori-deep-blue);
 }
 
 .bell_icon {
