가게추가 모달 네이밍 변경 및 버튼 간격 css수정

--- a/components/modal/workplace-registration.js/BusinessRegistration.module.css
+++ b/components/modal/workplace-registration.js/BusinessRegistration.module.css
@@ -91,7 +91,7 @@
 
 .formTitle {
   font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: 400;
   margin-bottom: 2rem;
   color: #111827;
 }
@@ -204,6 +204,7 @@
   padding: 1rem 1.5rem;
   display: flex;
   justify-content: space-between;
+  gap: 20px;
 }
 
 .errorText {
