feat: 컬러 및 로고 변경

--- a/app/(no-sidebar)/(auth)/login/find-pw/findPassword.module.css
+++ b/app/(no-sidebar)/(auth)/login/find-pw/findPassword.module.css
@@ -84,7 +84,7 @@
 }
 
 .stepNumber {
-    color: var(--main-woori-blue);
+    color: var(--main-orange);
     font-weight: 500;
     margin-right: 0.5rem;
 }
@@ -129,8 +129,8 @@
 .verifyButton {
     padding: 0 1rem;
     background-color: #fff;
-    border: 1px solid var(--main-woori-blue);
-    color: var(--main-woori-blue);
+    border: 1px solid var(--main-orange);
+    color: var(--main-orange);
     border-radius: 8px;
     cursor: pointer;
     white-space: nowrap;
@@ -139,7 +139,7 @@
 .findButton {
     width: 100%;
     padding: 1rem;
-    background-color: var(--main-woori-blue);
+    background-color: var(--main-orange);
     color: white;
     border: none;
     border-radius: 8px;
@@ -165,7 +165,7 @@
 }
 
 .emphasis {
-    color: var(--main-woori-blue);
+    color: var(--main-orange);
     font-weight: 500;
 }
 
