feat: 헤더, 네비게이션바 수정 디자인 적용

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
   --woori-ligth-blue: #FFAD7A;
   --woori-deep-blue: #0067AC;
   --light-orange: #FF8C59;
+  --deep-orange: #FF7903;
   --gray: #787878;
   --red: #E3262F;
   --sidebar-color: #FFFAF5;
