feat: 온보딩 페이지 수정 디자인 적용

--- a/app/(no-sidebar)/onboarding/page.module.css
+++ b/app/(no-sidebar)/onboarding/page.module.css
@@ -131,7 +131,7 @@
 }
 
 .moreButton:hover, .startButton:hover {
-    background: #6384ff;
+    background: var(--light-orange);
     transform: translateY(-2px);
     box-shadow: 0 4px 12px rgba(123, 156, 255, 0.2);
 }
