반응형 적용

--- a/components/header/main-header/main-header.module.css
+++ b/components/header/main-header/main-header.module.css
@@ -154,4 +154,8 @@
         align-items: center;
         justify-content: space-between;
     }
+    .mobileRight{
+        font-size: 14px;
+        gap: 5px;
+    }
 }
