--- a/app/(with-sidebar)/layout.module.css
+++ b/app/(with-sidebar)/layout.module.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
 .layoutContainer {
     display: grid;
     grid-template-areas: 
@@ -6,6 +13,7 @@
     grid-template-rows: var(--header-height) 1fr;
     grid-template-columns: var(--sidebar-width) 1fr;
     min-height: 100vh;
+    font-family: 'Pretendard-Regular';
 }
 
 .header{
